tests/programs/invalid/InvalidInterfaceModifiers.java
public interface InvalidInterfaceModifiers {
    static void staticInterfaceMethod();  // Invalid static interface method
}
